# Platform

./: .gitignore  CMakeLists.txt  HWReqirement.md  README.md  Requirements.md  SoftwareArchitecture(SAD).md  SoftwareArchitecture(SAD).md)  SoftwareReqirement.md  SysRequirements.md  run-qemu.bat  sdkconfig  sdkconfig.old
Application/: CMakeLists.txt
Application/Bluetooth/inc/: bluetooth.h
Application/Bluetooth/src/: bluetooth_middleware.c
Application/OTA/src/: ota.c
Application/SystemMonitor/inc/: system_monitor.h  system_monitor_cfg.h
Application/SystemMonitor/src/: system_monitor.c  system_monitor_cfg.c
Application/SystemStartup/: CMakeLists.txt
Application/SystemStartup/inc/: startup.h  startup_cfg.h
Application/SystemStartup/src/: main.c  startup.c  startup_cfg.c
Application/Wifi/inc/: wifi_middleware.h
Application/Wifi/src/: wifi_middleware.c
Application/cmake/: application_file_lists.cmake
Application/common/inc/: app_common.h  common.h
Application/common/src/: app_common.c
Application/display/inc/: char_display.h  char_display_cfg.h  character_display.h  character_display_config.h
Application/display/src/: char_display.c  char_display_cfg.c  character_display.c  character_display_config.c
Application/fan/inc/: fan.h  fan_cfg.h  fanctrl.h  fanctrl_cfg.h
Application/fan/src/: fan.c  fan_cfg.c  fanctrl.c  fanctrl_cfg.c
Application/heater/inc/: HeaterCtrl.h  HeaterCtrl_cfg.h  heater.h  heater_config.h
Application/heater/src/: HeaterCtrl.c  HeaterCtrl_cfg.c  heater.c  heater_config.c
Application/humadity/inc/: humctrl.h  humctrl_cfg.h  humidity_sensor.h  humidity_sensor_config.h
Application/humadity/src/: humctrl.c  humctrl_cfg.c  humidity_sensor.c  humidity_sensor_config.c
Application/kepad/: keypad.md
Application/kepad/inc/: keypad_mgr.h  keypad_mgr_cfg.h
Application/kepad/src/: keypad_mgr.c  keypad_mgr_cfg.c
Application/ledctrl/inc/: ledctrl.h  ledctrl_cfg.h
Application/ledctrl/src/: ledctrl.c  ledctrl_cfg.c
Application/lightControl/inc/: LightCtrl.h  LightCtrl_cfg.h  light_control.h  light_control_config.h
Application/lightControl/src/: LightCtrl.c  LightCtrl_cfg.c  light_control.c  light_control_config.c
Application/lightIndication/inc/: light_indication.h  light_indication_config.h  lightind.h  lightind_cfg.h
Application/lightIndication/src/: light_indication.c  light_indication_config.c  lightind.c  lightind_cfg.c
Application/lightctrl/inc/: lightctrl.h  lightctrl_cfg.h
Application/lightctrl/src/: lightctrl.c  lightctrl_cfg.c
Application/logger/inc/: logger.h  logger_cfg.h  logger_config.h
Application/logger/src/: Logger_cfg.c  logger.c  logger_cfg.c
Application/power/inc/: Power.h  Power_cfg.h
Application/power/src/: Power.c  Power_cfg.c
Application/pump/inc/: pump.h  pump_config.h  pumpctrl.h  pumpctrl_cfg.h
Application/pump/src/: pump.c  pump_config.c  pumpctrl.c  pumpctrl_cfg.c
Application/systemMgr/: SysMgrUX_Requirements.md  SysMgr_Requirements.md  UI_Specification.md  system_interaction_spec.md
Application/systemMgr/inc/: sys_mgr.h  sys_mgr_cfg.h  sys_mgr_config.h  sys_mgr_core.h  sysmgrux.h  ui_manager.h  ui_manager_cfg.h
Application/systemMgr/src/: sys_mgr.c  sys_mgr_cfg.c  sys_mgr_core.c  sysmgrux.c  ui_manager.c  ui_manager_cfg.c
Application/temperature/inc/: temp_sensor.h  temp_sensor_config.h  tempctrl.h  tempctrl_cfg.h
Application/temperature/src/: temp_sensor.c  temp_sensor_config.c  tempctrl.c  tempctrl_cfg.c
Application/temphum/inc/: temphumctrl.h  temphumctrl_cfg.h
Application/temphum/src/: temphumctrl.c  temphumctrl_cfg.c
Application/ventilator/inc/: venctrl.h  venctrl_cfg.h  ventctrl.h  ventctrl_cfg.h  ventilator.h  ventilator_config.h
Application/ventilator/src/: venctrl.c  venctrl_cfg.c  ventctrl.c  ventctrl_cfg.c  ventilator.c  ventilator_config.c
ECUAL/: CMakeLists.txt
ECUAL/cfg/: ecual_adc_config.c  ecual_adc_config.h  ecual_gpio_config.c  ecual_gpio_config.h  ecual_i2c_config.c  ecual_i2c_config.h  ecual_timer_config.c  ecual_timer_config.h  ecual_uart_config.c  ecual_uart_config.h
ECUAL/cmake/: ecual_file_lists.cmake
ECUAL/inc/: ecual_adc.h  ecual_gpio.h  ecual_i2c.h  ecual_timer.h  ecual_uart.h
ECUAL/src/: ecual_adc.c  ecual_gpio.c  ecual_i2c.c  ecual_timer.c  ecual_uart.c
HAL/: CMakeLists.txt
HAL/cmake/: ecual_file_lists.cmake  hal_file_lists.cmake
HAL/inc/: hal_adc.h  hal_adc_cfg.h  hal_bluetooth.h  hal_bluetooth_cfg.h  hal_cfg.h  hal_gpio.h  hal_gpio_cfg.h  hal_i2c.h  hal_i2c_cfg.h  hal_init.h  hal_modbus_rtu.h  hal_modbus_rtu_cfg.h  hal_pwm.h  hal_pwm_cfg.h  hal_spi.h  hal_spi_cfg.h  hal_storage.h  hal_storage_cfg.h  hal_timer.h  hal_timer_cfg.h  hal_uart.h  hal_uart_cfg.h  hal_wifi.h  hal_wifi_cfg.h
HAL/src/: hal_adc.c  hal_adc_cfg.c  hal_bluetooth.c  hal_bluetooth_cfg.c  hal_gpio.c  hal_gpio_cfg.c  hal_i2c.c  hal_i2c_cfg.c  hal_init.c  hal_modbus_rtu.c  hal_modbus_rtu_cfg.c  hal_pwm.c  hal_pwm_cfg.c  hal_spi.c  hal_spi_cfg.c  hal_storage.c  hal_storage_cfg.c  hal_timer.c  hal_timer_cfg.c  hal_timer_config.c  hal_uart.c  hal_uart_cfg.c  hal_wifi.c  hal_wifi_cfg.c
Mcal/: CMakeLists.txt
Mcal/cmake/: mcal_file_lists.cmake
MiddleSW/: CMakeLists.txt
MiddleSW/cmake/: middle_sw_file_lists.cmake
Requiremets/: UI_Specification.md
Requiremets/Architecture/: SoftwareArchitecture(SAD).md
Requiremets/Design/: RTE.md
Rte/: CMakeLists.txt
Rte/cmake/: rte_file_lists.cmake
Rte/inc/: Rte.h  Rte_cfg.h
Rte/src/: Rte.c
Service/: CMakeLists.txt
Service/ComM/inc/: com.h
Service/ComM/src/: com.c
Service/Factory/src/: com.c
Service/Modbus/inc/: modbus.h  modbus_cfg.h
Service/Modbus/src/: modbus.c  modbus_cfg.c
Service/NvM/inc/: nvm.h  nvm_cfg.h
Service/NvM/src/: nvm.c  nvm_cfg.c
Service/OS/config/include/freertos/: FreeRTOSConfig.h  sdkconfig.h
Service/OS/esp_additions/: idf_additions.c
Service/OTA/inc/: com.h
Service/cmake/: Service_file_lists.cmake  middle_sw_file_lists.cmake
cmake/: esp32_toolchain.cmake  project_global_settings.cmake
main/: CMakeLists.txt  basic_freertos_smp_usage.c  main.c
(+45 files in other folders)
